# 3DEngine

./: Makefile  components.txt  createClass.sh  makeBuild.sh  premake5.lua  run.sh  test.json
include/: boundingBox.hpp  boundingSphere.hpp  camera.hpp  collider.hpp  colliderFactory.hpp  constants.hpp  coreEngine.hpp  debug.hpp  followComponent.hpp  freeLook.hpp  freeMove.hpp  game.hpp  gameComponent.hpp  gameComponentFactory.hpp  gameObject.hpp  gameObjectBuilder.hpp  gameObjectManager.hpp  lighting.hpp  material.hpp  mesh.hpp  meshRenderer.hpp  obj_loader.hpp  physicsComponent.hpp  physicsEngine.hpp  physicsObject.hpp  plane.hpp  renderingEngine.hpp  resourceManager.hpp  sdlKey.hpp  shader.hpp  spawner.hpp  testing.hpp  transform.hpp  util.hpp  window.hpp
res/: camera.json  components.txt  follower.json  lights.json  monkey.json  scene.json
res/models/: sphere.obj~  sphere2.mtl  testBoxNoUV.mtl
res/shaders/: forward-ambient.fs  forward-ambient.vs  (+13 more)
src/: CMakeLists.txt  boundingBox.cc  boundingBox.cpp  boundingBox.h  boundingSphere.cc  boundingSphere.cpp  boundingSphere.h  camera.cc  camera.cpp  camera.h  collider.cpp  collider.h  colliderFactory.cpp  constants.h  coreEngine.cc  coreEngine.cpp  coreEngine.h  debug.h  followComponent.cc  followComponent.cpp  followComponent.h  forwardAmbient.cc  forwardAmbient.h  forwardDirectional.cc  forwardDirectional.h  forwardPoint.cc  forwardPoint.h  forwardSpot.cc  forwardSpot.h  freeLook.cc  freeLook.cpp  freeLook.h  freeMove.cc  freeMove.cpp  freeMove.h  game.cc  game.cpp  game.h  gameComponent.cc  gameComponent.cpp  (+69 more)
(+1 files in other folders)
